tests/cli/snapshots/cli__init__init_creates_config.snap
---
source: tests/cli/init.rs
info:
  program: glot
  args:
    - init
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Created .glotrc.json

----- stderr -----
