tests/cli/snapshots/cli__init__init_detects_next_intl.snap
---
source: tests/cli/init.rs
info:
  program: glot
  args:
    - init
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ Created .glotrc.json (detected framework: next-intl)

----- stderr -----
