tests/cli/snapshots/cli__init__init_detects_react_i18next.snap
---
source: tests/cli/init.rs
info:
  program: glot
  args:
    - init
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ Created .glotrc.json (detected framework: react-i18next)

----- stderr -----
