tests/cli/snapshots/cli__init__init_fails_if_exists.snap
---
source: tests/cli/init.rs
info:
  program: glot
  args:
    - init
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: .glotrc.json already exists
